# Local-First-Multimodal-Edge-Assistant

./: CMakeLists.txt  Project Directory Structure  README.md
scripts/: quantize_model.py
src/: main.cpp
src/include/: engine.hpp  engine1.hpp
